--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-paginate": "^6.3.0",
     "react-redux": "7.0.3",
     "react-scripts": "3.0.1",
     "redux": "4.0.1",
@@ -17,7 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "node_modules/.bin/eslint src/",
+    "eslint": "node_modules/.bin/eslint src/",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
+    "@types/react-paginate": "6.2.1",
     "@types/react-redux": "7.0.9",
     "@types/throttle-debounce": "1.1.1",
     "babel-cli": "^6.26.0",
